--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.7",
     "dompurify": "^3.0.6",
     "element-plus": "^2.5.8",
+    "dayjs": "^1.11.11",
     "marked": "^12.0.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
